Attempt 1 to fix layout on mobile.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,11 +11,10 @@
   background-color: hsl(240, 3%, 7%);
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: stretch;
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
-  padding: 0 0 .5em 0;
   font-size: clamp(.5rem, 3.4vmin, 1.5rem);
   transition: background-color .5s ease-in;
 }
