--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,7 +1,7 @@
 .navbar {
     background-color: inherit;
-    border-bottom: .08em solid hsl(240, 2%, 23%);
-    padding: .6em;
+    border-bottom: .08rem solid hsl(240, 2%, 23%);
+    padding: .6rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -9,5 +9,5 @@
 }
 
 .navbar.light {
-    border-bottom: .08em solid hsl(214, 9%, 84%)
+    border-bottom: .08rem solid hsl(214, 9%, 84%)
 }
